hphp/test/slow/hhbbc/static_props_016.php.expectf

Fatal error: Operator not supported for strings in %s/slow/hhbbc/static_props_016.php on line 7
